--- a/index.html
+++ b/index.html
@@ -2,12 +2,142 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>E-School</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 </head>
 <body>
     
+    <div class="container">
+
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">                
+                <img class="logo" src="icon/Logo.png" alt="">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <div class="d-flex justify-content-end">
+              <ul class="navbar-nav">
+                <li class="nav-item active">
+                  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Features</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Pricing</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Pricing</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Pricing</a>
+                  </li>
+              </ul>
+            </div>
+          </nav>
+          
+          <div class="container banner1">
+            <div class="row">
+              <div class="col-md-6">
+            <br>
+            <br>
+            <br>
+          <h6 class="red">Are you ready to learn?</h6>
+
+            <h1 class="heading">Learn with fun</h1>
+            <h1 class="heading">on <span class="green-heading">any schedule</span></h1>
+            <br>
+                <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus magni delectus laborum veritatis sunt velit ea deserunt!</p>
+                <br>
+                <button type="button" class="button">Get Started</button>
+
+          </div>
+
+          <div class="col-md-6">
+            <div class="cover-photo">
+            <img src="image/Illustration.png" alt="cover-photo">
+
+          </div>
+          </div>
+        </div>
+
+    </div>
+
+    <div class="container d-flex">
+
+
+      <div class="card text-center">
+        <div class="card-body card-background">
+
+          <img src="icon/book.png" alt="book">
+          <br>
+          <br>
+          <h4 class="card-title">1500+ Topic</h4>
+          <p class="card-text text">This card has supporting text below as a natural lead-in.</p>
+          <p class="card-text"></p>
+        </div>
+      </div>
+
+
+      <div class="card text-center">
+        <div class="card-body card-background2">
+
+          <img src="icon/Student.png" alt="book">
+          <br>
+          <br>
+          <h4 class="card-title">1800+ Mock Test</h4>
+          <p class="card-text text">This card has supporting text below as a natural lead-in.</p>
+          <p class="card-text"></p>
+        </div>
+      </div>
+
+      <div class="card text-center">
+        <div class="card-body card-background">
+
+          <img src="icon/Test.png" alt="book">
+          <br>
+          <br>
+          <h4 class="card-title">9K+ Test Token</h4>
+          <p class="card-text text">This card has supporting text below as a natural lead-in.</p>
+          <p class="card-text"></p>
+        </div>
+      </div>
+
+      <div class="card text-center">
+        <div class="card-body card-background">
+
+          <img src="icon/Students.png" alt="book">
+          <br>
+          <br>
+          <h4 class="card-title">2000+ Students</h4>
+          <p class="card-text text">This card has supporting text below as a natural lead-in.</p>
+          <p class="card-text"></p>
+        </div>
+      </div>
+
+    </div>
+
+    <div class="container">
+
+      <div class="card" style="width: 18rem;">
+        <img class="card-img-top" src="..." alt="Card image cap">
+        <div class="card-body">
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
+
+
+
+
+
+
+    </div>
+
+
+
 
 
 
